# yass

./: .travis.yml  AUTHORS  INSTALL  LICENSE.rst  Makefile.am  Makefile.in  NEWS  README  README.md  README.rst  aclocal.m4  appveyor.yml  configure  configure.ac  yass2blast.pl  yass2dotplot.php
doc/: Makefile.am  Makefile.in  yass.1
src/: Makefile-Linux32-1  Makefile-Linux32-2  Makefile-Linux32-4  Makefile-Linux32-8  Makefile-Linux64-1  Makefile-Linux64-2  Makefile-Linux64-4  Makefile-Linux64-8  Makefile-MacOSX32-1  Makefile-MacOSX32-2  Makefile-MacOSX32-4  Makefile-MacOSX32-8  Makefile-MacOSX64-1  Makefile-MacOSX64-2  Makefile-MacOSX64-4  Makefile-MacOSX64-8  Makefile-Win32-1  Makefile-Win32-2  Makefile-Win32-4  Makefile-Win32-8  Makefile-Win64-1  Makefile-Win64-2  Makefile-Win64-4  Makefile-Win64-8  Makefile.am  Makefile.in  align.c  align.h  assemble.c  assemble.h  avl.c  avl.h  display.c  display.h  global_var.c  global_var.h  kword.c  kword.h  list.c  list.h  (+15 more)
