# Makefile.am
# yass
#EXTRA_DIST = REAME
#SUBDIRS = doc src

bin_PROGRAMS = yass
yass_SOURCES = align.c assemble.c avl.c display.c global_var.c kword.c list.c main.c prdyn.c proba.c red_black.c regroup.c threads.c tuple.c util.c \
               align.h assemble.h avl.h display.h global_var.h kword.h list.h        prdyn.h proba.h red_black.h regroup.h threads.h tuple.h util.h
